[package]
name = "tera"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = "1"

# Optional deps
indexmap = { version = "2", optional = true }
unic-segment = { version = "0.9", optional = true }
walkdir = { version = "2.5", optional = true }
globset = { version = "0.4", optional = true }

# Crates for speedup
hashbrown = { version = "0.14", optional = true }
itoa = { version = "1.0", optional = true }
pulldown-cmark-escape = { version = "0.11", optional = true}

[features]
default = ["ahash", "preserve_order", "unicode", "fast", "glob_fs"]
# Use hashbrown with ahash hashing to improve performance
ahash = ["dep:hashbrown", "hashbrown/serde"]
# Keep order of insertion for Value
preserve_order = ["dep:indexmap"]
# If we want Tera to work with graphemes clusters rather than utf-8 characters when iterating on strings
unicode = ["dep:unic-segment"]
# Use itoa to format numbers (instead of std::fmt)
no_fmt = ["dep:itoa"]
# Use a faster HTML escape than the default one
fast_escape = ["dep:pulldown-cmark-escape"]
# Improve performance by adding extra dependencies
fast = ["no_fmt", "fast_escape"]
# Loads files disks using a glob
glob_fs = ["dep:walkdir", "dep:globset"]

[dev-dependencies]
criterion = "0.5"
iai-callgrind = "0.13"
insta = { version = "1", features = ["glob"] }
serde_derive = "1.0"
tempfile = "3"

[lib]
doctest = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "templates"
harness = false

# you can enable the benches below on Linux provided you have everything installed.
# see https://github.com/iai-callgrind/iai-callgrind for details
#[[bench]]
#name = "iai-value"
#harness = false
#
#[[bench]]
#name = "iai-escape"
#harness = false
#
#[[bench]]
#name = "iai-templates"
#harness = false
